--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> hey there </h1>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sint cupiditate ad minima suscipit doloribus, rem magni dignissimos voluptate accusamus laboriosam
+         laborum fugit itaque soluta ullam libero. Asperiores, perferendis fugiat.</p>
 </body>
 </html>
